# scout

./: .code-review-evidence.md  .debug-report.md  .gitignore  .handoff.md  .implementation-plan.md  .verification-evidence.md  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
research/: README.md  discovery-prompt.md  findings-chatgpt-2026-04-01.md  findings-claude-2026-04-01.md  findings-deepseek-2026-04-01.md  findings-gemini-2026-04-01.md  findings-grok-2026-04-01.md  findings-kimi-2026-04-01.md  findings-perplexity-2026-04-01.md  synthesis.md
src/scout/: __init__.py  __main__.py  cli.py  gates.py  intake.py  models.py  normalizer.py  pipeline.py  scoring.py
tests/: test_cli.py  test_gates.py  test_intake_integration.py  test_intake_unit.py  test_models_core.py  test_models_pipeline.py  test_normalizer.py  test_pipeline.py  test_scoring.py
tests/fixtures/: sample_listings.json
